Added header tags at close to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                 border: 0px none;
                 opacity: 0;
             }
+
+            h1, h2{
+                color:rgb(238, 160, 0);
+            }
+
+            p{
+                color:blue;
+            }
     </style>
 </head>
 <body>
@@ -66,7 +74,9 @@
             <area id="stoneyCreek" alt="Stoney Creek" title="Stoney Creek" href="#" shape="poly" coords="374,308,403,318,422,256,418,253,404,258,390,250,383,249,374,249,360,242,354,257,342,254,340,267,329,273,321,274,319,277,316,277,313,290" />
         </map>
 
-        <p id="s"></p>
+        <h2></h2>
+        <h3></h3>
+        <p id="desc"></p>
     </div>
    
 
