--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
         <div id='content'></div>
         <div id='myImage' class="map">
             <!--canvas size must be set in attributes and not in css-->
-            <canvas id='b' height=494 width=494></canvas>
+            <canvas id='b' height=494 width=494>Your browser does not support canvas tags</canvas>
             <img id="image" src="img/hamilton.png" usemap="#Map">
         </div>
 
 
         <map name="Map" id="Map">
-            <area id="flamborough" alt="flamborough" title="Flamborough, Ontario" data-population="Population: 22,300" href="#" shape="poly" coords="72,178,100,265,194,239,226,221,241,220,251,206,277,179,288,166,191,73,162,97,164,112,98,129,104,167" />            
-            <area id="ancaster" alt="Ancaster" title="Ancaster, Ontario" data-population="Population: 36,750" href="#" shape="poly" coords="97,265,100,270,232,334,253,262,250,260,248,242,242,243,241,235,229,240,222,240,216,241,215,236,196,241" />
-            <area id="dundas" alt="Dundas" title="Dundas, Ontario" data-population="Population: 18,300" href="#" shape="poly" coords="271,206,268,212,270,215,267,220,251,224,249,228,245,232,241,235,237,235,229,240,223,239,217,241,215,236,209,236,197,241,196,238,226,221,235,221,244,216,244,212,250,207,251,202,259,195" />
-            <area id="glanbrook" alt="Glanbrook" title="Glanbrook, Ontario" data-population="Population: 12,000" href="#" shape="poly" coords="232,334,350,389,374,308,313,289,311,291,251,273" />
-            <area id="hamilton" alt="Hamilton" title="Hamilton, Ontario" data-population="Population: 300,300" href="#" shape="poly" coords="359,240,352,241,341,230,333,217,326,199,323,201,326,209,325,212,332,223,330,223,324,218,324,216,307,211,304,221,288,217,284,221,281,220,277,222,272,216,271,213,272,211,275,214,280,211,278,209,273,209,271,207,268,212,269,216,267,221,259,224,251,225,249,230,246,234,242,236,243,243,250,242,250,260,254,262,252,272,312,291,315,276,318,276,320,272,327,272,338,268,340,261,341,253,354,256" />
-            <area id="stoneyCreek" alt="Stoney Creek" title="Stoney Creek, Ontario" data-population="Population: 190,300" href="#" shape="poly" coords="374,308,403,318,422,256,418,253,404,258,390,250,383,249,374,249,360,242,354,257,342,254,340,267,329,273,321,274,319,277,316,277,313,290" />
+            <area id="flamborough" alt="flamborough" title="Flamborough, Ontario" data-population="Population: 22,300" data-description="Lorem Ipsum is simply dummy text of the printing and typesetting industry." href="#" shape="poly" coords="72,178,100,265,194,239,226,221,241,220,251,206,277,179,288,166,191,73,162,97,164,112,98,129,104,167" />            
+            <area id="ancaster" alt="Ancaster" title="Ancaster, Ontario" data-population="Population: 36,750" data-description="Contrary to popular belief, Lorem Ipsum is not simply random text. " href="#" shape="poly" coords="97,265,100,270,232,334,253,262,250,260,248,242,242,243,241,235,229,240,222,240,216,241,215,236,196,241" />
+            <area id="dundas" alt="Dundas" title="Dundas, Ontario" data-population="Population: 18,300" data-description="It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old." href="#" shape="poly" coords="271,206,268,212,270,215,267,220,251,224,249,228,245,232,241,235,237,235,229,240,223,239,217,241,215,236,209,236,197,241,196,238,226,221,235,221,244,216,244,212,250,207,251,202,259,195" />
+            <area id="glanbrook" alt="Glanbrook" title="Glanbrook, Ontario" data-population="Population: 12,000" data-description="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout." href="#" shape="poly" coords="232,334,350,389,374,308,313,289,311,291,251,273" />
+            <area id="hamilton" alt="Hamilton" title="Hamilton, Ontario" data-population="Population: 300,300" data-description="Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32." href="#" shape="poly" coords="359,240,352,241,341,230,333,217,326,199,323,201,326,209,325,212,332,223,330,223,324,218,324,216,307,211,304,221,288,217,284,221,281,220,277,222,272,216,271,213,272,211,275,214,280,211,278,209,273,209,271,207,268,212,269,216,267,221,259,224,251,225,249,230,246,234,242,236,243,243,250,242,250,260,254,262,252,272,312,291,315,276,318,276,320,272,327,272,338,268,340,261,341,253,354,256" />
+            <area id="stoneyCreek" alt="Stoney Creek" title="Stoney Creek, Ontario" data-population="Population: 190,300" data-description="But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born." href="#" shape="poly" coords="374,308,403,318,422,256,418,253,404,258,390,250,383,249,374,249,360,242,354,257,342,254,340,267,329,273,321,274,319,277,316,277,313,290" />
         </map>
 
         <h2></h2>
